--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,8 @@ $sideBarWidth: 210px;
 $subMenuBg:#1f2d3d;
 $subMenuHover:#001528;
 $subMenuActiveText:#f4f4f5;
-$menuBg:#545c64;
+// $menuBg:#545c64;
+$menuBg:#163450;
 $menuText:#fff;
 $menuActiveText:#42b983; // Also see settings.sidebarTextTheme
 
